# bewise_quiz_task

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py  config.py
src/database/: db_utils.py  models.py
src/typings/: server_types.py
